# Compilers-studying

./: CMakeLists.txt  Grammar.txt  install_env.sh  install_packages.sh
bison/: Grammar.y
compiler/bison/: Grammar.y
compiler/include/: LexHelper.h  ParserHelper.h  SymbolTable.h  SyntaxTree.h
compiler/lex/: lexer.cpp  vocabulary.flex
compiler/src/: ParserHelper.cpp  SyntaxTree.cpp  parser.cpp
compiler/utest/: bison_test.cpp  lex_test.cpp
compiler/utest/data/: bison_test1.test  bison_test2.test  bison_test3.test  bison_test4.test  bison_test5.test  bisonerror_test1.test  bisonerror_test2.test  bisonerror_test3.test  bisonerror_test4.test  lex_test1.test  lex_test2.test
include/: LexHelper.h  token.h
lex/: lexer.cpp  vocabulary.flex
src/: SyntaxTree.cpp  scanner.cpp
utest/: lex_test.cpp
utest/data/: bison_test1.test
